//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

9th October 2013 Daniel Craik
     Added Gounaris-Sakurai and Gaussian shapes to EvtGenericDalitz 
     and set sensible defaults for LASS parameters.

19th September 2013 John Back
     Modified EvtGenExternal/EvtPythiaEngine to keep track of any new 
     particles that are added to the default Pythia database to avoid
     duplicating particle/anti-particle entries that could override
     previously defined Pythia decay chains.

18th September 2013 John Back
     Added Mac OS flags for the configure script and src/Makefile.

15th July 2013 Daniel Craik
     Added flag to turn on scaling of LASS amplitude by M/q in EvtDalitzReso

15th July 2013 Daniel Craik
     EvtParserXML now accepts file names containing environment variables,
     exponential non-resonant shape in EvtDalitzReso now defined as exp(-alpha*m^2),
     LASS shape in EvtDalitzReso now takes a cutoff parameter

4th July 2013 Daniel Craik
     Added LASS, exponential non-resonant and linear non-resonant shapes to EvtGenericDalitz.

3rd July 2013 Daniel Craik
     Fixed auto-install script for R01-02-00.

1st July 2013 Daniel Craik
     Added auto-install script for R01-02-00.

R01-02-00-------------------------------------------------------------------
15th May 2013 John Back
     New tag, version "1.2.0", incorporating all changes below.

14th May 2013 Michal Kreps
     Added Blatt-Weisskopf barrier factors up to L=5 in 
     EvtGenBase/EvtBlattWeisskopf::compute().

14th May 2013 John Back
     Added additional entries (appended at the end) to the evt.pdl particle 
     data file courtesy of Romulus Godang and Belle II colleagues.

14th March 2013 John Back
     Added the method EvtParticle::getPDGId() to get the PDG integer for a
     particle directly (which just calls EvtPDL::getStdHep()).